--- a/app/globals.css
+++ b/app/globals.css
@@ -3,19 +3,9 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  --greenLogo: #15bb89;
+  --purpleLogo: #4814b0;
+  --background: #00060f;
+  --customPurple: #4F46E5;
+  
 }
