style: add 'customPurpleBtn'custom color

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,6 @@
   --greenLogo: #15bb89;
   --purpleLogo: #4814b0;
   --background: #00060f;
-  --customPurple: #4F46E5;
-  
+  --customPurple: #18063a;
+  --customPurpleBtn: #4F46E5;
 }
