--- a/app/globals.css
+++ b/app/globals.css
@@ -9,3 +9,29 @@
   --customPurple: #18063a;
   --customPurpleBtn: #4F46E5;
 }
+
+/* Estilos para navegadores baseados em WebKit */
+::-webkit-scrollbar {
+  width: 12px;
+  height: 20px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 10px;
+  border: 3px solid #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+  /* Estilos para o Firefox */
+html {
+  scrollbar-width: auto;
+  scrollbar-color: #888 var(--customPurple);
+}
